--- a/docker/redis_simple/docker-compose.yml
+++ b/docker/redis_simple/docker-compose.yml
@@ -2,6 +2,7 @@ name: redis-sandbox
 services:
   redis:
     image: redis:7.4.0
+    container_name: redis-sandbox
     restart: always
     ports:
       - "6379:6379"
